# nusb

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: fuzz.yml  release.yml  rust.yml
examples/: blocking.rs  bulk.rs  bulk_io.rs  bulk_io_smol.rs  bulk_io_tokio.rs  buses.rs  control.rs  descriptors.rs  detach.rs  detach_claim.rs  hotplug.rs  hotplug_cancellable.rs  list.rs  root_hubs.rs  string_descriptors.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: descriptors.rs
src/: bitset.rs  cancellable_hotplug.rs  control.rs  descriptor.rs  descriptors.rs  device.rs  enumeration.rs  error.rs  hotplug.rs  ioaction.rs  lib.rs  maybe_future.rs  transfer.rs  transfer_internal.rs  util.rs
src/io/: mod.rs  read.rs  write.rs
src/platform/: mod.rs
src/platform/illumos_ugen/: device.rs  enumeration.rs  mod.rs  transfer.rs
src/platform/linux_usbfs/: android.rs  device.rs  enumeration.rs  events.rs  hotplug.rs  mod.rs  transfer.rs  usbfs.rs
src/platform/macos_iokit/: device.rs  enumeration.rs  events.rs  hotplug.rs  iokit.rs  iokit_c.rs  iokit_usb.rs  mod.rs  termination.rs  transfer.rs
src/platform/webusb/: device.rs  enumeration.rs  hotplug.rs  mod.rs  transfer.rs
src/platform/windows_winusb/: cfgmgr32.rs  device.rs  enumeration.rs  events.rs  hotplug.rs  hub.rs  mod.rs  registry.rs  setupapi.rs  threadpool.rs  transfer.rs  util.rs
src/transfer/: buffer.rs  control.rs  internal.rs  mod.rs  queue.rs
